# TraceCXL

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: README.md  cbfc.md  routing.md
examples/: application_profiles.py  characterize_congestion.py  generate_trace.py  generated_workload.csv  multi_switch_congestion.py  sample_trace.csv  simple_fabric.py  trace_replay.py  workload_comparison.py
src/: __init__.py  simulation.py
src/analysis/: __init__.py  metrics.py  plots.py  validator.py
src/core/: __init__.py  engine.py  host.py  packet.py  switch.py
src/routing/: __init__.py  strategy.py
src/topology/: builder.py
src/workload/: __init__.py  patterns.py  trace_export.py
tests/: test_compliance.py  test_core.py  test_integration.py  test_routing.py  test_topology.py  test_trace_export.py  test_trace_replay.py
